<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PizzaTime"
    android:background="@color/light_gray"
    tools:context=".presentation.fragments.MenuFragment">

    <LinearLayout
        android:layout_gravity="top"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">



        <TextView

            android:id="@+id/city_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_city"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:drawableEndCompat="@drawable/ic_arrow_down"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:padding="8dp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/qr_scanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_qr_scanner"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/qr_code_description" />






    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.AppBarLayout

            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">




            <com.google.android.material.appbar.CollapsingToolbarLayout
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                >


                <HorizontalScrollView
                    android:background="@color/white"
                    app:layout_collapseMode="parallax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    >


                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <androidx.cardview.widget.CardView
                            android:layout_width="360dp"
                            android:layout_margin="16dp"
                            app:cardCornerRadius="16dp"
                            android:layout_height="160dp">
                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:cropToPadding="true"
                                android:scaleType="fitXY"
                                android:src="@drawable/banner1"
                                />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="360dp"
                            android:layout_margin="16dp"
                            app:cardCornerRadius="16dp"
                            android:layout_height="match_parent">
                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:cropToPadding="true"
                                android:scaleType="fitXY"
                                android:src="@drawable/banner2"
                                />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="360dp"
                            android:layout_margin="16dp"
                            app:cardCornerRadius="16dp"
                            android:layout_height="match_parent">
                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:cropToPadding="true"
                                android:scaleType="fitXY"
                                android:src="@drawable/banner3"
                                />

                        </androidx.cardview.widget.CardView>




                    </LinearLayout>
                </HorizontalScrollView>




            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <HorizontalScrollView

                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:scrollbars="none"
                >

                <LinearLayout
                    android:id="@+id/category_buttons_list"
                    style="@style/Theme.PizzaTime"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" >
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/pizza_category_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pizza_category_button_text"
                        android:hint="@string/pizza_category_button_hint"
                        style="@style/category_button"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="4dp"

                        />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/desserts_category_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desserts_category_button_text"
                        android:hint="@string/desserts_category_button_hint"
                        style="@style/category_button"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        />
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/combo_category_button_text"
                        android:hint="@string/combo_category_button_hint"
                        style="@style/category_button"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        />
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snacks_category_button_text"
                        android:hint="@string/snacks_category_button_hint"
                        style="@style/category_button"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        />
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drinks_category_button_text"
                        android:hint="@string/drinks_category_button_hint"
                        style="@style/category_button"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        />
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sauces_category_button_text"
                        android:hint="@string/sauces_category_button_hint"
                        style="@style/category_button"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        />
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/others_category_button_text"
                        android:hint="@string/others_category_button_hint"
                        style="@style/category_button"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        />

                </LinearLayout>


            </HorizontalScrollView>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/menu_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>








</LinearLayout>